1999-10-18  Alexander Larsson  <alla@lysator.liu.se>

	* app/app_procs.c:
	Removed include of dlfcn.h

1999-10-18  James Henstridge  <james@daa.com.au>

	* app/diapagelayout.c (paper_size_change, orient_changed): set upper
	bound on margin widths.  It is set to the paper width/height.

	* objects/flowchart/diamond.c (diamond_distance_from): fixed distance
	routine for the diamond.  This bug was found and fixed by Daniel Wang
	<danwang@CS.Princeton.EDU>

Sun Oct 17 19:46:36 1999  ape@gandalf.spacetec.no  (Asbjorn Pettersen)

	* app/commands.c: Add <sys/types.h> before <sys/stat.h> to
	remove warning (OS/2 version).

1999-10-17  Alexander Larsson  <alla@lysator.liu.se>

	* README:
	Put a pointer to objects/custom/README.
	
1999-10-17  Alexander Larsson  <alla@lysator.liu.se>

	* dia.spec:
	Updated version to 0.80

	* configure.in:
	Updated version to 0.80cvs

1999-04-08  Alexander Larsson  <alla@lysator.liu.se>

	* Released Dia 0.80
	Tag called DIA_0_80
	
1999-10-17  Fredrik Hallenberg  <hallon@lysator.liu.se>

	* app/Makefile.am
	* lib/Makefile.am
	* objects/UML/Makefile.am
	* objects/ER/Makefile.am
	* objects/network/Makefile.am
	* objects/standard/Makefile.am
	* objects/FS/Makefile.am
	* objects/sybase/Makefile.am
	* objects/flowchart/Makefile.am
	* objects/custom/Makefile.am
	Added -I$(top_srcdir)/intl which is needed for
	--with-included-gettext.

	* POTFILES.in
	Updated.
	
	* po/sv.po
	Updated swedish translation.

1999-10-16  Alexander Larsson  <alla@lysator.liu.se>

	* configure.in:
	Updated version number to 0.80.

	* KNOWN_BUGS:
	New file.

	* TODO:
	Updated. Moved bugs to KNOWN_BUGS.

	* NEWS:
	Updated with 0.80 release notes.
	
1999-10-16  Alexander Larsson  <alla@lysator.liu.se>
	
	* lib/orth_conn.c:
	For backwards compatibility, make sure handle 0 and 1 are the
	first and last handle. Fixes compatibility with 0.41, breaks
	compatibility with cvs version.
	Fixed bug in undo/redo of adding deleting endpoint segments
	when the endpoint was connected.